@@ -47,13 +47,17 @@ impl Run {
     self.laps.len()
   }
 
-  pub fn frequency(&self) -> usize {
+  pub fn frequency(&self) -> f64 {
     if self.laps.is_empty() {
-      return 0;
+      return 0.0;
     }
     let frequency = self.laps[0].frequency();
     assert!(self.laps.iter().all(|lap| frequency == lap.frequency()));
     frequency
+  }
+
+  pub fn yield_laps(self) -> Vec<Lap> {
+    self.laps
   }
 }
 
@@ -140,7 +144,7 @@ mod tests {
 
     assert_eq!(51, run.number_of_channels());
     assert_eq!(4, run.number_of_laps());
-    assert_eq!(100, run.frequency());
+    assert_eq!(100.0, run.frequency());
 
     let sec_path = "./testdata/WT-20_E05-ARA_Q2_AU-RS3-R5-S-S_016_a_1139.xrk";
     assert_ne!(run, Run::new(sec_path).unwrap());
