@@ -13,6 +13,7 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 - type `RunData` has been renamed to `Run`
 - simplified API for `XdrkFile`
 - slight improvements and simplifications on API of `Channel` and `RawChannel`
+- the `frequency` methods now return f64 for BSON serializability
 
 ### Fixed
 - data vectors in `RawChannelData` previously weren't zeroed; now they are
